# my-font-craft

./: .gitignore  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts  wrangler.toml
.github/workflows/: ci.yml
cli/: Cargo.toml  generate-test-pdf.mjs  generate-test-pdf.ts
cli/src/: cell.rs  distort.rs  layout.rs  main.rs  marker.rs  perspective.rs  pipeline.rs  qr.rs  template.rs
docs/: README.md  characters.md  font-generation.md  future-plans.md  image-processing.md  overview.md  tech-stack.md  template-spec.md  ui-design.md
public/: 404.html  manifest.json  robots.txt  sitemap.xml
src/: App.tsx  index.tsx
src/components/: Footer.tsx  Header.tsx  ProgressBar.tsx  ScanResultGrid.tsx
src/components/icons/: IconDownload.tsx  IconFolder.tsx  IconFont.tsx  IconGift.tsx  IconHeart.tsx  IconPen.tsx  IconPrinter.tsx  IconUpload.tsx  IconZip.tsx  index.ts
src/data/: characters.ts  joyo-kanji.ts  trivia.ts
src/lib/: merge.ts
src/lib/font/: builder.ts  calt.ts
src/lib/scanner/: marker-detector.ts  processor.ts  qr-reader.ts
src/lib/template/: generator.ts  layout.ts
src/lib/vectorizer/: contour.ts
src/pages/: About.tsx  Home.tsx  Template.tsx  Upload.tsx
src/styles/: global.css
tests/e2e/: full-flow.spec.ts
tests/fixtures/: generate-mock-scans.ts
tests/helpers/: canvas-polyfill.ts
tests/integration/: pipeline.test.ts
tests/unit/: font-builder.test.ts  marker-detector.test.ts  merge.test.ts  qr-reader.test.ts  vectorizer.test.ts
