[package]
name = "mfc-cli"
version = "0.1.0"
edition = "2021"
description = "My Font Craft - 画像処理パイプライン（台形補正デバッグ用）"

[dependencies]
image = "0.25"
imageproc = "0.25"
clap = { version = "4", features = ["derive"] }
qrcode = "0.14"
rqrr = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
